# rba.github.io

./: .envrc  .gitignore  .gitmodules  .travis.yml  404.html  CNAME  Gemfile  README.md  _config.yml  astro.config.mjs  config.toml  docker-compose.yml  feed.xml  gallery-en.md  gallery-sk.md  gallery.md  home.md  index-en.md  index-sk.md  index.html  index.markdown  index.md  organizers-en.html  organizers-en.md  organizers-sk.html  organizers.html  organizers.md  package-lock.json  package.json  pyproject.toml  results-en.md  results.md  rules-en.md  rules-sk.md  rules.md  setup.cfg  shell.nix  sitemap.xml
.github/workflows/: gh-pages.yml  (+2 more)
_astro/: about.DihoMZuP.css
_data/: i18n.yml  org_logo.yml  organizers.yml  organizers_wo.yml  partner_logo.yml
_includes/: floating-social.html  footer.html  google-analytics.html  head.html  header.html  script.html
_layouts/: default.html  home.html  organizers.html  page.html  post.html  post_redirect.html  rules.html  rules_post.html  slides.html
_sass/: floating-social.scss  main.scss  style.scss
about/: index.html
aktualny-rocnik/: index.html
archiv/: index.html
categories/: index.html
community/: index.html
en/: 404.html  CNAME  feed.xml  index-sk.md  index.html  shell.nix  sitemap.xml
gallery/: index.html
gdpr/: index.html
js/: init.js
kategorie/: index.html
kontakt/: index.html
layouts/: 404.html
nix/: sources.json
organizers/: index.html
results/: index.html
rules/: index.html
scripts/: optimize-archive.mjs  optimize-sponsorship.mjs
search/: index.html
tags/: index.html
(+164 files in other folders)
